# payments_rinha_2025

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  fixed.md  todo.md
artifacts/: commits.md  failures.md  fixed.md  health_report_t1_1.json  health_report_t1_2.json  todo.md
docs/: challange_implementation_proposal.md  review_3.md  review_4.md
src/: lib.rs  main.rs
src/modules/: mod.rs
src/modules/cache/: mod.rs  redis.rs
src/modules/config/: mod.rs
src/modules/health/: mod.rs  service.rs
src/modules/models/: mod.rs
src/modules/payment/: mod.rs
src/modules/processors/: mod.rs  selector.rs
tests/: dead_code_integration_test.rs  docker_test.rs  health_check_test.rs  integration_payment_processor.rs  integration_test.rs  payment_test.rs  processor_selector_test.rs  serialization_test.rs  server_test.rs  setup_test.rs  t1_1_setup_test.rs  t1_2_server_test.rs
